--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
     "civicrm/composer-downloads-plugin": "^2.0",
     "league/csv": "^9.2",
     "tplaner/when": "~3.0.0",
-    "xkerman/restricted-unserialize": "~1.1"
+    "xkerman/restricted-unserialize": "~1.1",
+    "ext-intl": "*"
   },
   "require-dev": {
     "cache/integration-tests": "dev-master"
